# ware_prod

./: .editorconfig  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
.github/workflows/: build.yml  staging.yml
assistant/: conftest.py
assistant/addresses/: admin.py  apps.py  models.py  wagtail_hooks.py
assistant/api/: urls.py
assistant/core/: admin.py  apps.py  checks.py  middlewares.py  models.py  pub_sub.py  views.py
assistant/fulfillments/: models.py
assistant/orders/: apps.py  helpers.py  models.py  services.py  urls.py  views.py  wagtail_hooks.py
assistant/pages/: apps.py  models.py  urls.py  views.py
assistant/products/: admin.py  apps.py  forms.py  helpers.py  models.py  services.py  urls.py  views.py  wagtail_hooks.py
assistant/purchases/: apps.py  forms.py  helpers.py  models.py  services.py  urls.py  views.py  wagtail_hooks.py
assistant/shipping/: apps.py  forms.py  models.py  urls.py  views.py
assistant/shopify_sync/: __init__.py  admin.py  apps.py  decorators.py  helpers.py  models.py  schemas.py  service.py  signal_handlers.py  signals.py  tasks.py  urls.py  views.py
assistant/templates/: base.html  layout.html
assistant/users/: admin.py  apps.py  models.py  urls.py  views.py
assistant/utils/: forms.py  helpers.py  services.py
client/: package-lock.json  vue.config.js
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
docs/: conf.py  make.bat
platform/: conftest.py
requirements/: base.txt  production.txt
(+231 files in other folders)
