[tool.poetry]
name = "platform"
version = "0.1.0"
description = ""
authors = ["Basel J. Hamadeh <hamadeh.basel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
