[tool.poetry]
name = "platform"
version = "0.1.0"
description = ""
authors = ["Basel J. Hamadeh <hamadeh.basel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
maxminddb-geolite2 = "^2018.703"
httpx = "0.14.1"
aiohttp = "3.6.2"
extruct = "^0.9.0"
django-sequences = "^2.5"
crispy-tailwind = "^0.2.0"
django-widget-tweaks = "^1.4.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
